# pinecone

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
llm/: agent-workflow.llm.yaml  finder.llm.yaml  orchestrator.llm.yaml  pinecone.llm.md  pinecone.llm.yaml  reader.llm.yaml
llms/: finder.llm.md  init.llm.md  init.llm.yaml  orchestrator.llm.md  reader.llm.md
pinecone/: __init__.py  app.py  cli.py  cli_utils.py  llm.py  orchestrator_cli.py  reader_cli.py  tools.py  types.py
pinecone/agents/: __init__.py  base.py  finder.py  orchestrator.py  reader.py
pinecone/prompts/: __init__.py  finder.md  orchestor.md  reader.md
pinecone_agent/: __init__.py  agent.py  cli.py  config.py  llm.py  memory.py  prompts.py  schema.py  tools.py
prompts/: orchestrator.md  reader.md
