[project]
name = "pinecone"
version = "0.1.0"
description = "Local multi-agent research assistant orchestrated over a CLI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Pinecone" }]
dependencies = []

[project.scripts]
pinecone = "pinecone.cli:main"

[tool.setuptools.packages.find]
exclude = ["llms*", "llms.*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
