[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinecone"
version = "0.1.0"
description = "Local research agent with finder, reader, orchestrator roles."
readme = "AGENTS.md"
requires-python = ">=3.9.6"
dependencies = [
    "requests>=2.31,<3",
]

[project.scripts]
pinecone-finder = "pinecone.cli:main"
pinecone-reader = "pinecone.reader_cli:main"

[tool.setuptools.packages.find]
include = ["pinecone", "pinecone.*"]
namespaces = false
